Added Donor Model and Modified User
