# src/openapi.json
@@ -25,9 +25,26 @@
             "type": "number",
             "example": 1
           },
-          "username": {
+          "name": {
             "type": "string",
             "example": "JohnDoe"
+          },
+          "email": {
+            "type": "string",
+            "example": "gogemekuse@gmail.com"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "SYSTEM_ADMIN",
+              "DONOR",
+              "COLLECTOR",
+              "MANAGER",
+              "STORE_MANAGER",
+              "LABORATORY",
+              "HOSPITAL"
+            ],
+            "example": "SYSTEM_ADMIN"
           },
           "password": {
             "type": "string",
@@ -44,7 +61,9 @@
         },
         "required": [
           "id",
-          "username",
+          "name",
+          "email",
+          "role",
           "password",
           "createdAt",
           "updatedAt"
@@ -53,9 +72,26 @@
       "NewUser": {
         "type": "object",
         "properties": {
+          "name": {
+            "type": "string",
+            "example": "Seblewengel Mamo"
+          },
           "email": {
             "type": "string",
-            "example": "JohnDoe"
+            "example": "gogemekuse@gmail.com"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "SYSTEM_ADMIN",
+              "DONOR",
+              "COLLECTOR",
+              "MANAGER",
+              "STORE_MANAGER",
+              "LABORATORY",
+              "HOSPITAL"
+            ],
+            "example": "SYSTEM_ADMIN"
           },
           "password": {
             "type": "string",
@@ -63,8 +99,76 @@
           }
         },
         "required": [
+          "name",
           "email",
+          "role",
           "password"
+        ]
+      },
+      "Donor": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "example": 1
+          },
+          "userId": {
+            "type": "number",
+            "example": 1
+          },
+          "bloodType": {
+            "type": "string",
+            "example": "A+"
+          },
+          "createdAt": {
+            "type": "string",
+            "example": "2023-07-15T10:00:00.000Z"
+          },
+          "updatedAt": {
+            "type": "string",
+            "example": "2023-07-15T10:00:00.000Z"
+          }
+        },
+        "required": [
+          "id",
+          "userId",
+          "bloodType",
+          "createdAt",
+          "updatedAt"
+        ]
+      },
+      "NewDonor": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "number",
+            "example": 1
+          },
+          "bloodType": {
+            "type": "string",
+            "example": "A+"
+          }
+        },
+        "required": [
+          "userId",
+          "bloodType"
+        ]
+      },
+      "New Donor": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "number",
+            "example": 1
+          },
+          "bloodType": {
+            "type": "string",
+            "example": "A+"
+          }
+        },
+        "required": [
+          "userId",
+          "bloodType"
         ]
       }
     },
@@ -260,6 +364,35 @@
           },
           "401": {
             "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/api/donor": {
+      "post": {
+        "summary": "Register a new donor",
+        "tags": [
+          "Donor"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/New Donor"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The created donor",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Donor"
+                }
+              }
+            }
           }
         }
       }
